--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
 DISCORD_TOKEN=your-discord-token
 DISCORD_CHANNEL_ID=your-channel-id
-REAL_DEBRID_USERNAME=your-real-debrid-username
-REAL_DEBRID_PASSWORD=your-real-debrid-password
 CHROMEDRIVER_PATH=path-to-chromedriver
+#REPLACE_WHOLE_STRING_BELOW_WITH_YOUR_BROWSER_STORAGE_STRING
+RD_ACCESS_TOKEN={"value":"YOURTOKEN","expiry":123}
