--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-discord.py==2.3.2
 selenium==4.19.0
 python-dotenv==0.19.2
 inflect==7.4.0
 deep-translator==1.11.4
 loguru==0.7.2
 fuzzywuzzy==0.18.0
+pydantic==2.9.2
+fastapi==0.115.4
+requests==2.32.3
+APScheduler==3.10.4
