--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
-DISCORD_TOKEN=your-discord-token
-DISCORD_CHANNEL_ID=your-channel-id
 CHROMEDRIVER_PATH=path-to-chromedriver
-#REPLACE_WHOLE_STRING_BELOW_WITH_YOUR_BROWSER_STORAGE_STRING
-RD_ACCESS_TOKEN={"value":"YOURTOKEN","expiry":123}
+RD_ACCESS_TOKEN={"value":"YOUR_TOKEN","expiry":123456789}
+TRAKT_API_KEY=YOUR_TRAKT_TOKEN
+OVERSEERR_API_KEY=YOUR_OVERSEERR_TOKEN
+OVERSEERR_BASE=https://YOUR_OVERSEERR_URL.COM
