--- a/example.env
+++ b/example.env
@@ -1,5 +1,8 @@
 CHROMEDRIVER_PATH=path-to-chromedriver
 RD_ACCESS_TOKEN={"value":"YOUR_TOKEN","expiry":123456789}
+RD_REFRESH_TOKEN=YOUR_REFRESH_TOKEN
+RD_CLIENT_ID=YOUR_CLIENT_ID
+RD_CLIENT_SECRET=YOUR_CLIENT_SECRET
 TRAKT_API_KEY=YOUR_TRAKT_TOKEN
 OVERSEERR_API_KEY=YOUR_OVERSEERR_TOKEN
 OVERSEERR_BASE=https://YOUR_OVERSEERR_URL.COM
