--- a/example.env
+++ b/example.env
@@ -6,3 +6,5 @@ RD_CLIENT_SECRET=YOUR_CLIENT_SECRET
 TRAKT_API_KEY=YOUR_TRAKT_TOKEN
 OVERSEERR_API_KEY=YOUR_OVERSEERR_TOKEN
 OVERSEERR_BASE=https://YOUR_OVERSEERR_URL.COM
+HEADLESS_MODE=true
+TORRENT_FILTER_REGEX=^(?!.*【.*?】)(?!.*[\u0400-\u04FF])(?!.*\[esp\]).*
