--- a/example.env
+++ b/example.env
@@ -9,3 +9,5 @@ HEADLESS_MODE=true
 ENABLE_AUTOMATIC_BACKGROUND_TASK=false
 REFRESH_INTERVAL_MINUTES=120
 TORRENT_FILTER_REGEX=^(?!.*【.*?】)(?!.*[\u0400-\u04FF])(?!.*\[esp\]).*
+MAX_MOVIE_SIZE=60
+MAX_EPISODE_SIZE=5
