--- a/example.env
+++ b/example.env
@@ -7,6 +7,7 @@ OVERSEERR_API_KEY=YOUR_OVERSEERR_TOKEN
 OVERSEERR_BASE=https://YOUR_OVERSEERR_URL.COM
 HEADLESS_MODE=true
 ENABLE_AUTOMATIC_BACKGROUND_TASK=false
+ENABLE_SHOW_SUBSCRIPTION_TASK=false
 REFRESH_INTERVAL_MINUTES=120
 TORRENT_FILTER_REGEX=^(?!.*【.*?】)(?!.*[\u0400-\u04FF])(?!.*\[esp\]).*
 MAX_MOVIE_SIZE=60
