--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,7 +45,7 @@ jobs:
             type=semver,pattern={{major}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{version}}
-
+            type=raw,value=latest,enable={{is_default_branch}}
             type=edge,branch=main
             type=ref,event=branch
             type=ref,event=pr
