--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3'
-
 services:
   seerrbridge:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile  # Explicitly specify the Python Dockerfile
     ports:
       - "8777:8777"
     env_file:
@@ -10,3 +10,23 @@ services:
     volumes:
       - .:/app
     restart: always
+
+  bridgeboard:
+    build:
+      context: .
+      dockerfile: Dockerfile.node  # Point to the Node.js Dockerfile
+    ports:
+      - "3777:3777"
+    env_file:
+      - .env
+    volumes:
+      - .:/app
+      - node_modules:/app/node_modules
+      - next_build:/app/.next
+    environment:
+    - SEERRBRIDGE_URL=http://seerrbridge:8777
+    restart: always
+    
+volumes:
+  node_modules:
+  next_build:
