--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,7 @@ jobs:
       attestations: write
 
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up QEMU
@@ -35,12 +35,13 @@ jobs:
         with:
           install: true
 
-      - name: Docker metadata
-        id: meta
+      # Metadata for seerrbridge
+      - name: Docker metadata for seerrbridge
+        id: meta_seerrbridge
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/${{ github.repository_owner }}/SeerrBridge
+            ghcr.io/${{ github.repository_owner }}/seerrbridge
           tags: |
             type=semver,pattern={{major}}
             type=semver,pattern={{major}}.{{minor}}
@@ -49,6 +50,23 @@ jobs:
             type=edge,branch=main
             type=ref,event=branch
             type=ref,event=pr
+
+      # Metadata for bridgeboard
+      - name: Docker metadata for bridgeboard
+        id: meta_bridgeboard
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ghcr.io/${{ github.repository_owner }}/bridgeboard
+          tags: |
+            type=semver,pattern={{major}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{version}}
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=edge,branch=main
+            type=ref,event=branch
+            type=ref,event=pr
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         if: github.event_name != 'pull_request'
@@ -57,16 +75,28 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build container
-        id: push
+      # Build and push seerrbridge
+      - name: Build and push seerrbridge
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
-          # platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6,linux/s390x
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta_seerrbridge.outputs.tags }}
+          labels: ${{ steps.meta_seerrbridge.outputs.labels }}
+          provenance: mode=max
+          sbom: true
+
+      # Build and push bridgeboard
+      - name: Build and push bridgeboard
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile.node
+          platforms: linux/amd64,linux/arm64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta_bridgeboard.outputs.tags }}
+          labels: ${{ steps.meta_bridgeboard.outputs.labels }}
           provenance: mode=max
           sbom: true
