--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,14 @@ services:
     env_file:
       - ./.env
     volumes:
-      - shared_logs:/app
+      - shared_logs:/app/logs
       - ./.env:/app/.env
     restart: unless-stopped
     command: >
       sh -c "
         cat /app/.env > /dev/null && 
         echo 'Starting SeerrBridge with refreshed env' &&
-        uvicorn seerrbridge:app --host 0.0.0.0 --port 8777
+        uvicorn main:app --host 0.0.0.0 --port 8777
       "
     networks:
       - seerrbridge_network
@@ -27,16 +27,13 @@ services:
     env_file:
       - ./.env
     volumes:
-      - shared_logs:/seerrbridge_data
+      - shared_logs:/app/logs
       - ./.env:/app/.env
     environment:
       - SEERRBRIDGE_URL=http://seerrbridge:8777
-      - SEERRBRIDGE_LOG_PATH=/seerrbridge_data/seerbridge.log
+      - SEERRBRIDGE_LOG_PATH=/logs/seerrbridge.log
     entrypoint: >
       sh -c "
-        mkdir -p /app && 
-        ln -sf /seerrbridge_data/seerbridge.log /app/seerbridge.log &&
-        ln -sf /seerrbridge_data/episode_discrepancies.json /app/episode_discrepancies.json &&
         npm start
       "
     restart: unless-stopped
