--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,10 +14,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     strategy:
       fail-fast: true
-
     permissions:
       id-token: write
       packages: write
@@ -27,9 +25,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         id: buildx
@@ -45,13 +40,8 @@ jobs:
           images: |
             ghcr.io/${{ github.repository_owner }}/seerrbridge
           tags: |
-            type=semver,pattern={{major}}
-            type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{version}}
             type=raw,value=latest,enable={{is_default_branch}}
-            type=edge,branch=main
-            type=ref,event=branch
-            type=ref,event=pr
 
       # Metadata for bridgeboard
       - name: Docker metadata for bridgeboard
@@ -61,13 +51,8 @@ jobs:
           images: |
             ghcr.io/${{ github.repository_owner }}/bridgeboard
           tags: |
-            type=semver,pattern={{major}}
-            type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{version}}
             type=raw,value=latest,enable={{is_default_branch}}
-            type=edge,branch=main
-            type=ref,event=branch
-            type=ref,event=pr
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -83,12 +68,14 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta_seerrbridge.outputs.tags }}
           labels: ${{ steps.meta_seerrbridge.outputs.labels }}
           provenance: mode=max
           sbom: true
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/seerrbridge:latest
+          cache-to: type=inline
 
       # Build and push bridgeboard
       - name: Build and push bridgeboard
@@ -96,9 +83,16 @@ jobs:
         with:
           context: .
           file: ./Dockerfile.node
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta_bridgeboard.outputs.tags }}
           labels: ${{ steps.meta_bridgeboard.outputs.labels }}
           provenance: mode=max
           sbom: true
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/bridgeboard:latest
+          cache-to: type=inline
+
+    # Cancel redundant runs
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.ref }}
+      cancel-in-progress: true
