--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,5 +1,4 @@
 name: Docker Image CI
-
 on:
   push:
     branches: ["main"]
@@ -10,7 +9,6 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '0 0,12 * * *'
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,17 +19,16 @@ jobs:
       packages: write
       contents: read
       attestations: write
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v3
         with:
           install: true
-
       # Metadata for seerrbridge
       - name: Docker metadata for seerrbridge
         id: meta_seerrbridge
@@ -42,7 +39,6 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=raw,value=latest,enable={{is_default_branch}}
-
       # Metadata for bridgeboard
       - name: Docker metadata for bridgeboard
         id: meta_bridgeboard
@@ -53,7 +49,6 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=raw,value=latest,enable={{is_default_branch}}
-
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         if: github.event_name != 'pull_request'
@@ -61,14 +56,13 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       # Build and push seerrbridge
       - name: Build and push seerrbridge
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta_seerrbridge.outputs.tags }}
           labels: ${{ steps.meta_seerrbridge.outputs.labels }}
@@ -76,14 +70,13 @@ jobs:
           sbom: true
           cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/seerrbridge:latest
           cache-to: type=inline
-
       # Build and push bridgeboard
       - name: Build and push bridgeboard
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile.node
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta_bridgeboard.outputs.tags }}
           labels: ${{ steps.meta_bridgeboard.outputs.labels }}
@@ -91,7 +84,6 @@ jobs:
           sbom: true
           cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/bridgeboard:latest
           cache-to: type=inline
-
     # Cancel redundant runs
     concurrency:
       group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.ref }}
