--- a/example.env
+++ b/example.env
@@ -12,3 +12,5 @@ REFRESH_INTERVAL_MINUTES=120
 TORRENT_FILTER_REGEX=^(?!.*【.*?】)(?!.*[\u0400-\u04FF])(?!.*\[esp\]).*
 MAX_MOVIE_SIZE=60
 MAX_EPISODE_SIZE=5
+TV_QUEUE_MAXSIZE=500
+MOVIE_QUEUE_MAXSIZE=500
